--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "@eslint/eslintrc": "^3",
     "eslint": "^9",
     "eslint-config-next": "15.4.3"
-  }
+  },
+  "engines": {
+        "node": "^12.22.0 || ^14.17.0 || >=16.0.0"
+      }
 }
